--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Reset & Base Styles */
+/* Reset & Base Styles
 * {
     margin: 0;
     padding: 0;
@@ -710,3 +710,4 @@ body {
         font-size: 1.25rem;
     }
 }
+
